--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: NanoVNA User Guide
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   NanoVNA User Guide
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/NanoVNA-manual" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 repository: cho45/NanoVNA-manual
 
