--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -21,9 +21,6 @@ jobs:
         -v ${{ github.workspace }}:/srv/jekyll  -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
         openlabs/docker-wkhtmltopdf  --print-media-type https://cho45.github.io/NanoVNA-manual/ /srv/jekyll/_site/output.pdf
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@master
-
     - name: Build
       env:
         GO111MODULE: on
@@ -31,4 +28,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         go get -u github.com/tcnksm/ghr
-        $GOPATH/bin/ghr -n latest -b "latest pdf" -draft latest ${{ github.workspace }}/_site/output.pdf
+        $GOPATH/bin/ghr -replace -n latest -b "latest pdf" -prerelease latest ${{ github.workspace }}/_site/output.pdf
