--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -9,10 +9,10 @@ jobs:
 
     steps:
         
-    - name: Set up Go 1.12
-      uses: actions/setup-go@v1
+    - name: Set up Go 1.14
+      uses: actions/setup-go@v2.1.3
       with:
-        version: 1.12
+        go-version: 1.14
       id: go
       
     - name: Convert HTML to PDF
